2003-06-27  Ethan Merritt <merritt@u.washington.edu>

	* src/set.c: Fix unexpected behaviour that 'set grid nox noy'
	turned the x and y grids ON rather than off.

2003-06-26  Hans-Bernhard Broeker <broeker@physi.rwth-aachen.de>

	* term/dxf.trm (DXF_HTIC, DXF_VTIC):  Fixed definitions so 'set
	size ratio' can work.

2003-06-25  Ethan Merritt <merritt@u.washington.edu>

	* src/term_api.h src/command.c term/x11.trm: Define a flag
	TERM_INIT_ON_REPLOT by which a terminal driver can request that
	term->init() be called at the start of a replot command.

	* src/gplt_x11.c src/mouse.c: Send the current true size of the
	x11 display window back from gnuplot_x11 to x11.trm during
	term->init(). Use this information to update the aspect ratio.

2003-06-21  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c: gnuplot_x11<->x11.trm font info exchange is now
	working.

2003-06-20  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c:
	It turns out that yesterday's patch breaks the "pause -1" command
	(it always returns immediately).  I have temporarily disabled the
	new code while I track down the problem.  The offending line is now
	protected by #ifdef X11_FONT_UPDATE.

	* term/x11.trm:
	Add an interlock so that the gnuplot_x11<->x11.trm font info exchange
	is only performed once per splot, rather than every time the view is
	changed using the mouse.

2003-06-19  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c src/graphics.c src/mouse.c src/mousecmn.h term/x11.trm
	Use existing mouse communication pipe to send X11 font characteristics 
	back from gnuplot_x11 to x11.trm. This allows gnuplot to lay out the 
	plot with v_char and h_char sizes that are correct for the current 
	default X11 font. This patch slightly changes the timing of initial
	operations over the pipe, and adds a FFLUSH(), so there is a remote 
	possibility that it also fixes a reported problem in which gnuplot_x11