@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.175 2003/06/13 10:44:06 lhecking Exp $
+C RCS $Id: gnuplot.doc,v 1.176 2003/06/25 12:47:51 lhecking Exp $
 C 18 September 2001
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001   Thomas Williams, Colin Kelley et al.
 C
@@ -7054,8 +7054,11 @@ C ... and restart the table:
  it requires four columns of data.  It also draws a small arrowhead at the
  end of the vector.
 
+ Example:
+       plot 'file.dat' using 1:2:3:4 with vectors head filled lt 2
+
  `set clip one` and `set clip two` affect drawing vectors.
- Please see `set clip`.
+ Please see `set clip` and `arrowstyle`.
 5 xerrorbars
 ?commands set style xerrorbars
 ?set style xerrorbars
