@@ -1,5 +1,5 @@
 /*
- * $Id: misc.h,v 1.13 2002/10/21 10:24:18 mikulik Exp $
+ * $Id: misc.h,v 1.14 2003/01/24 08:26:52 mikulik Exp $
  */
 
 /* GNUPLOT - misc.h */
@@ -71,7 +71,7 @@ void filledcurves_options_tofile __PROTO((filledcurves_opts *, FILE *));
 void lp_parse __PROTO((struct lp_style_type *, TBOOLEAN, TBOOLEAN, int, int));
 void lp_use_properties __PROTO((struct lp_style_type *lp, int tag, int pointflag));
 void arrow_use_properties __PROTO((struct arrow_style_type *arrow, int tag));
-void arrow_parse __PROTO((struct arrow_style_type *, TBOOLEAN));
+void arrow_parse __PROTO((struct arrow_style_type *, int default_linetype, TBOOLEAN));
 
 void parse_fillstyle __PROTO((struct fill_style_type *fs, int def_style, 
                               int def_density, int def_pattern, int def_border ));
